# kafka-demo

./: README.md  docker-compose.kafka.yml  docker-compose.yml  pyproject.toml
app/: Dockerfile  claims.py  generator.py  iot.py  main.py  requirements.txt
app/tuba/: app.py
stream_apps/streams.examples/: pom.xml
stream_apps/streams.examples/src/main/java/iot/: IoTStreamApp.java  JsonDeserializer.java  JsonSerializer.java
stream_apps/streams.examples/src/main/java/myapps/: Claim.java  JsonDeserializer.java  JsonSerializer.java  ProcessedClaim.java  RawClaim.java
test/: __init__.py  test_generator.py
